--- a/setup.cfg
+++ b/setup.cfg
@@ -38,7 +38,7 @@ python_requires = >=3.9
 install_requires =
     csvw
     cldfbench
-    cldfgeojson
+    cldfgeojson>=1.1.0
     pyglottolog
     clldutils
     pycldf>=1.30.0
