--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = pyglottography
-version = 0.1.1.dev0
+version = 0.2.0
 author = Robert Forkel
 author_email = robert_forkel@eva.mpg.de
 description = Programmatic curation of Glottography datasets
