--- a/setup.cfg
+++ b/setup.cfg
@@ -36,13 +36,15 @@ package_dir =
     = src
 python_requires = >=3.9
 install_requires =
-    csvw
+    csvw>=3.6.0
+    simplepybtex
     cldfbench
     cldfgeojson>=1.1.0
     pyglottolog
     clldutils
     pycldf>=1.30.0
     shapely
+    mako
 include_package_data = True
 
 [options.packages.find]
@@ -53,6 +55,8 @@ pyglottography =
     glottography_template/*
 
 [options.entry_points]
+cldfbench.commands =
+    glottography = pyglottography.commands
 cldfbench.scaffold =
     glottography = pyglottography.scaffold:GlottographyTemplate
 
